--- a/app/views/static_pages/manual.html.erb
+++ b/app/views/static_pages/manual.html.erb
@@ -1,7 +1,55 @@
 <div id="manual-content">
-  <h2>
-    <span class="weight-bold">URL: </span>https://lalalalunch.co.jp/api/v1/
-  </h2>
+  <section>
+    <h3>概要</h3>
+    <p>
+      条件に合致した店舗情報の中からランダムに1件を返却する。<br>
+    </p>
+
+    <table border=1 width="100%">
+      <tr>
+        <th>API名</th>
+        <td>店舗情報の取得</td>
+      </tr>
+      <tr>
+        <th>URL</th>
+        <td>https://lalalalunch.co.jp/api/v1/restaurant</td>
+      </tr>
+      <tr>
+        <th>HTTPメソッド</th>
+        <td>GET</td>
+      </tr>
+    </table>
+  </section>
+  <section>
+    <h3>リクエストヘッダー</h3>
+    <table border=1 width="100%">
+      <colgroup>
+        <col width="20%">
+        <col width="8%">
+        <col width="10%">
+        <col width="25%">
+        <col width="40%">
+      </colgroup>
+      <thead>
+        <tr>
+          <th>名</th>
+          <th>必須</th>
+          <th>型</th>
+          <th>説明</th>
+          <th>備考</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Authorization</td>
+          <td align="center">○</td>
+          <td>string</td>
+          <td>アクセストークン</td>
+          <td>らららランチより提供されたアクセストークン<br>Bearer/Tokenのみ有効</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
   <section>
     <h3>リクエストパラメーター</h3>
     <table border=1>
@@ -14,11 +62,11 @@
       </colgroup>
       <thead>
         <tr>
-          <th class="api-table__th">パラメータ名</th>
-          <th class="api-table__th">必須</th>
-          <th class="api-table__th">型</th>
-          <th class="api-table__th">説明</th>
-          <th class="api-table__th">備考</th>
+          <th>パラメータ名</th>
+          <th>必須</th>
+          <th>型</th>
+          <th>説明</th>
+          <th>備考</th>
         </tr>
       </thead>
       <tbody>
@@ -63,9 +111,9 @@
       <thead>
         <tr>
           <th colspan="5">パラメータ名</th>
-          <th width="7%">出現回数</th>
+          <th width="6%">出現回数</th>
           <th width="10%">型</th>
-          <th width="25%">説明</th>
+          <th width="30%">説明</th>
           <th width="30%">備考</th>
         </tr>
       </thead>
@@ -76,6 +124,55 @@
           <td align="center">object</td>
           <td>処理結果情報</td>
           <td>処理結果情報を保持するオブジェクト</td>
+        </tr>
+        <tr>
+          <td width="4%" rowspan="5"></td>
+
+          <td colspan="4">status</td>
+          <td align="center">1</td>
+          <td align="center">integer</td>
+          <td>ステータスコード</td>
+          <td>
+            0: 正常終了<br>
+            1: 想定エラー終了<br>
+            9: 想定外エラー終了<br>
+          </td>
+        </tr>
+        <tr>
+          <td colspan="4">error</td>
+          <td align="center">1</td>
+          <td align="center">object</td>
+          <td>エラー情報</td>
+          <td>
+            エラー情報を保持するオブジェクト<br>
+            ステータスコードが「正常終了」以外のときのみ返却される
+          </td>
+        </tr>
+        <tr>
+          <td width="4%" rowspan="3"></td>
+
+          <td colspan="3">message</td>
+          <td align="center">1</td>
+          <td align="center">string</td>
+          <td>エラーメッセージ</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td colspan="3">type</td>
+          <td align="center">1</td>
+          <td align="center">string</td>
+          <td>エラークラス名</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td colspan="3">details</td>
+          <td align="center">1</td>
+          <td align="center">object</td>
+          <td>エラー詳細</td>
+          <td>
+            各エラーコードによって構造が異なるエラー詳細情報<br>
+            エラーコードによっては返却しない場合もある
+          </td>
         </tr>
         <tr>
           <td colspan="5">restaurant</td>
@@ -105,14 +202,14 @@
           <td align="center">1</td>
           <td align="center">integer</td>
           <td>緯度</td>
-          <td></td>
+          <td>度分秒十進数</td>
         </tr>
         <tr>
           <td colspan="4">longitude</td>
           <td align="center">1</td>
           <td align="center">integer</td>
           <td>経度</td>
-          <td></td>
+          <td>度分秒十進数</td>
         </tr>
         <tr>
           <td colspan="4">category</td>
@@ -125,21 +222,21 @@
           <td colspan="4">url</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>PCサイトURL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">url_mobile</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>携帯サイトURL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">coupon_url</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>クーポンURL</td>
           <td></td>
         </tr>
         <tr>
@@ -148,21 +245,21 @@
           <td colspan="3">pc</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>PC用URL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="3">mobile</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>携帯用URL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">image_url</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>店舗画像</td>
           <td></td>
         </tr>
         <tr>
@@ -171,79 +268,100 @@
           <td colspan="3">shop_image1</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>店舗画像1のURL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="3">shop_image2</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>店舗画像2のURL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="3">qrcode</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>QRコード画像のURL</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">address</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>住所</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">tel</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>電話番号</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">opentime</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>営業時間</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">holiday</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>休業日</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">parking_lots</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>駐車場台数</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="4">pr</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>PR文</td>
           <td></td>
         </tr>
         <tr>
-          <td width="4%" rowspan="3"></td>
+          <td width="4%" rowspan="2"></td>
 
           <td colspan="3">pr_short</td>
           <td align="center">1</td>
           <td align="center">string</td>
-          <td></td>
+          <td>PR文（短）</td>
           <td></td>
         </tr>
         <tr>
           <td colspan="3">pr_long</td>
           <td align="center">1</td>
           <td align="center">string</td>
+          <td>PR文（長）</td>
           <td></td>
+        </tr>
+        <tr>
+          <td colspan="4">lunch</td>
+          <td align="center">1</td>
+          <td align="center">integer</td>
+          <td>ランチタイム平均予算</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td colspan="4">credit_card</td>
+          <td align="center">1</td>
+          <td align="center">string</td>
+          <td>クレジットカード名称</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td colspan="4">e_money</td>
+          <td align="center">1</td>
+          <td align="center">string</td>
+          <td>電子マネー名称</td>
           <td></td>
         </tr>
       </tbody>
