--- a/app/views/static_pages/welcom.html.erb
+++ b/app/views/static_pages/welcom.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <p>らららランチAPIは、ぐるなびが所有する豊富な飲食店情報の中から、特定の飲食店データ1件を簡単に取得できる無料のAPIです。</p>
+  <p>らららランチAPIは、ぐるなびが所有する豊富な飲食店情報の中から、条件に当てはまる複数の飲食店データの中からランダムに1件を取得できる無料のAPIです。</p>
 </div>
