--- a/app/views/static_pages/manual.html.erb
+++ b/app/views/static_pages/manual.html.erb
@@ -5,7 +5,7 @@
       条件に合致した店舗情報の中からランダムに1件を返却する。<br>
     </p>
 
-    <table border=1 width="100%">
+    <table border=1>
       <tr>
         <th>API名</th>
         <td>店舗情報の取得</td>
@@ -22,7 +22,7 @@
   </section>
   <section>
     <h3>リクエストヘッダー</h3>
-    <table border=1 width="100%">
+    <table border=1>
       <colgroup>
         <col width="20%">
         <col width="8%">
