--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,55 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div id="edit-content">
+  <section>
+    <h1>ユーザー情報変更</h1>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+      <table border=1>
+        <tr>
+          <th>
+            <%= f.label :userid %>
+            <span class="require-label">必須</span>
+          </th>
+            <td>
+              <div class="label">【半角英数1 ~ 20文字以内(小文字)】</div>
+              <%= f.text_field :userid, autofocus: true, autocomplete: "userid" %>
+            </td>
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :email %>
+            <span class="require-label">必須</span>
+          </th>
+          <td><%= f.email_field :email, autocomplete: "email" %></td>
+          <!-- TODO 確認用email入力欄 -->
+        </tr>
+        <tr>
+          <th><%= f.label :password %></th>
+          <td>
+            <div class="label">【半角英数<%= @minimum_password_length %>文字以上(小文字)】</div>
+            <div><%= f.password_field :password, autocomplete: "new-password" %></div>
+            <div><%= f.password_field :password_confirmation, autocomplete: "new-password" %><span class="p-l-5 label">確認用</span></div>
+            <div class="label">＊変更したくない場合は未入力にする</div>
+          </td>
+        </tr>
+        <tr>
+          <th>
+            <%= f.label :current_password %>
+            <span class="require-label">必須</span>
+          </th>
+          <td><%= f.password_field :current_password, autocomplete: "current-password" %></td>
+        </tr>
+      </table>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="actions">
+        <%= f.submit "変更する" %>
+      </div>
     <% end %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+    <%= link_to "戻る", :back %>
+  </section>
+</div>
