--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+/* TODO 兎に角急いで作ったから色々ちゃんと書き直す. */
+
 body {
   display: grid;
   margin: 0;
@@ -49,4 +51,23 @@ td {
   color: red;
   font-size: 75%;
   padding-left: 5px;
+}
+.tar {
+  text-align: right;
+}
+.tac {
+  text-align: center;
+}
+.mt-30 {
+  margin-top: 30px;
+}
+.btn {
+  padding: 0.3em 15em;
+  color: white;
+  border: solid 2px #f50b0b;
+  border-radius: 3px;
+  transition: .4s;
+  background: red;
+  font-size: larger;
+  text-decoration: none;
 }
