--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,21 +3,20 @@
     <h1>ユーザー情報変更</h1>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
-
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
-
+      <div class="tar"><%= link_to "戻る", :back %></div>
       <table border=1>
         <tr>
           <th>
             <%= f.label :userid %>
             <span class="require-label">必須</span>
           </th>
-            <td>
-              <div class="label">【半角英数1 ~ 20文字以内(小文字)】</div>
-              <%= f.text_field :userid, autofocus: true, autocomplete: "userid" %>
-            </td>
+          <td>
+            <div class="label">【半角英数1 ~ 20文字以内(小文字)】</div>
+            <%= f.text_field :userid, autofocus: true, autocomplete: "userid" %>
+          </td>
         </tr>
         <tr>
           <th>
@@ -46,12 +45,9 @@
           <td><%= f.password_field :current_password, autocomplete: "current-password" %></td>
         </tr>
       </table>
-
-      <div class="actions">
-        <%= f.submit "変更する" %>
+      <div class="mt-30 tac">
+        <%= f.submit "更新する", class: "btn" %>
       </div>
     <% end %>
-
-    <%= link_to "戻る", :back %>
   </section>
 </div>
