--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @user.userid %> 様</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p>ログインの失敗数が上限を超えたためアカウントをロックしました。</p>
 
-<p>Click the link below to unlock your account:</p>
+<p>下記リンクをクリックすることでロックを解除できます。</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to 'ロックを解除する', unlock_url(@resource, unlock_token: @token) %></p>
